src/test/ui/issues/issue-39848.stderr
error: expected `{`, found `foo`
  --> $DIR/issue-39848.rs:18:19
   |
LL |         if $tgt.has_$field() {}
   |         --                 - help: try placing this code inside a block: `{ foo(); }`
   |         |
   |         this `if` statement has a condition, but no block
...
LL |     get_opt!(bar, foo);
   |                   ^^^

error: aborting due to previous error

